--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <div class="container">
+    <div class="loader" id="loader"></div>
+    <div class="container" id="container">
         <div class="app-title">
             <p>Today's Weather</p>
         </div>
@@ -28,6 +28,7 @@
             </div>
         </div>
     </div>
+    <!-- Loader -->
     
     <script src="app.js"></script>
 </body>
